--- a/index.html
+++ b/index.html
@@ -52,6 +52,428 @@
       padding: 18mm 15mm;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
       font-size: 11pt;
+      position: relative;
+    }
+
+    /* 3px Top & Bottom Safe Margin (Header/Footer) */
+    .resume::before,
+    .resume::after {
+      content: '';
+      display: block;
+      height: 3px;
+      background: transparent;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 12pt;
+      border-bottom: 2pt solid #1a5276;
+      padding-bottom: 8pt;
+    }
+
+    .header h1 {
+      font-size: 24pt;
+      font-weight: 700;
+      color: #1a5276;
+      margin-bottom: 4pt;
+      letter-spacing: 1px;
+    }
+
+    .header p {
+      font-size: 12pt;
+      color: #555;
+      margin: 2pt 0;
+    }
+
+    .section {
+      margin-top: 14pt;
+    }
+
+    .section-title {
+      font-size: 13pt;
+      font-weight: 700;
+      color: #1a5276;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border-bottom: 1pt solid #ddd;
+      padding-bottom: 4pt;
+      margin-bottom: 8pt;
+    }
+
+    .content {
+      margin-bottom: 10pt;
+    }
+
+    .job-title {
+      font-weight: 700;
+      font-size: 12pt;
+      color: #1a5276;
+      margin-bottom: 2pt;
+    }
+
+    .company {
+      font-style: italic;
+      color: #555;
+      margin-bottom: 4pt;
+    }
+
+    ul {
+      margin: 6pt 0;
+      padding-left: 18pt;
+    }
+
+    li {
+      margin-bottom: 4pt;
+      position: relative;
+    }
+
+    li::marker {
+      color: #1a5276;
+      font-weight: bold;
+    }
+
+    .two-col {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15pt;
+      margin-top: 8pt;
+    }
+
+    .skills-list {
+      columns: 2;
+      column-gap: 20pt;
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .skills-list li {
+      margin-bottom: 4pt;
+      position: relative;
+      padding-left: 12pt;
+    }
+
+    .skills-list li::before {
+      content: "■";
+      color: #1a5276;
+      position: absolute;
+      left: 0;
+      font-size: 8pt;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 8pt;
+      font-size: 10pt;
+    }
+
+    th, td {
+      border: 1pt solid #ddd;
+      padding: 6pt 8pt;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f0f0f0;
+      font-weight: 700;
+      color: #1a5276;
+    }
+
+    @media print {
+      body, .resume { background: white; box-shadow: none; margin: 0; padding: 0; }
+      .download-btn { display: none; }
+      .resume { padding: 15mm; width: 100%; }
+      .resume::before, .resume::after { height: 3px; }
+    }
+  </style>
+</head>
+<body>
+
+  <button class="download-btn" id="downloadPdf">
+    Download PDF
+  </button>
+
+  <div class="resume" id="resumeContent">
+
+    <!-- 3px Top Margin (Safe) -->
+    
+    <!-- Header -->
+    <div class="header">
+      <h1>ABHISHEK KUMAR</h1>
+      <p>+91 75185 31311 | 22cse357.abhishekkumar@giet.edu</p>
+      <p>Barahi Newada, Varanasi, Uttar Pradesh - 221207</p>
+    </div>
+
+    <!-- Career Objective -->
+    <div class="section">
+      <div class="section-title">Career Objective</div>
+      <div class="content">
+        <p>Seeking a challenging role in software development and data science where I can leverage my technical expertise in full-stack development, machine learning, and cloud technologies to drive innovation and contribute to organizational success.</p>
+      </div>
+    </div>
+
+    <!-- Education -->
+    <div class="section">
+      <div class="section-title">Education</div>
+      <table>
+        <thead>
+          <tr>
+            <th>Degree & Year</th>
+            <th>Institution</th>
+            <th>Board/University</th>
+            <th>CGPA/%</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>B.Tech (CSE)<br>2022–2026</td>
+            <td>Gandhi Institute of Engineering and Technology University</td>
+            <td>GIET University, Gunupur</td>
+            <td>6.5 CGPA</td>
+          </tr>
+          <tr>
+            <td>Intermediate (+2 Science)<br>2021</td>
+            <td>Shree Bhagirathi Maharaj Inter College</td>
+            <td>UP Board</td>
+            <td>60.2%</td>
+          </tr>
+          <tr>
+            <td>High School (10th)<br>2019</td>
+            <td>Green Valley Public School</td>
+            <td>CBSE</td>
+            <td>67.1%</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Internships -->
+    <div class="section">
+      <div class="section-title">Internships</div>
+
+      <div class="content">
+        <div class="job-title">Full-Stack Web Development Intern</div>
+        <div class="company">TECHISMUST Innovation Lab</div>
+        <ul>
+          <li>Built dynamic movie review platform with user auth, search, and responsive UI</li>
+          <li>Developed full-stack blog with MERN, JWT, and rich-text editor</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="job-title">Full-Stack Web Development Intern</div>
+        <div class="company">JK Paper Ltd.</div>
+        <ul>
+          <li>Designed multi-role ticketing system with secure authentication</li>
+          <li>Integrated analytics dashboard for performance tracking</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="job-title">AIML Intern</div>
+        <div class="company">EduNet Foundation</div>
+        <ul>
+          <li><strong>Major Project:</strong> Disease Prediction System (>90% precision)</li>
+          <li><strong>Mini Project:</strong> Iris Flower Classification (95%+ accuracy using SVM/KNN)</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="job-title">Data Science Intern</div>
+        <div class="company">Remark Skill Education</div>
+        <ul>
+          <li>Completed summer training in Data Science using Python, Pandas, and Scikit-Learn</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Projects -->
+    <div class="section">
+      <div class="section-title">Projects</div>
+
+      <div class="content">
+        <div class="job-title">Hospital Management System</div>
+        <ul>
+          <li>Admin, Doctor & Patient portals with appointment booking and email alerts</li>
+          <li>Tech: PHP, MySQL, Bootstrap</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="job-title">Secure Video Confession Platform</div>
+        <ul>
+          <li>Tri-level anti-corruption reporting system with encrypted video upload</li>
+          <li>Tech: React, Node.js, PostgreSQL, JWT</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="job-title">Face Detection using OpenCV</div>
+        <ul>
+          <li>Real-time face detection using Haar Cascade Classifier</li>
+          <li>Built extensible framework for future ML applications</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Skills & Certifications -->
+    <div class="section">
+      <div class="two-col">
+        <div>
+          <div class="section-title">Skills</div>
+          <ul class="skills-list">
+            <li>Python</li>
+            <li>Machine Learning</li>
+            <li>Node.js</li>
+            <li>React.js</li>
+            <li>MongoDB</li>
+            <li>PostgreSQL</li>
+            <li>AWS</li>
+            <li>IBM Cloud</li>
+            <li>Scikit-Learn</li>
+            <li>Pandas & NumPy</li>
+            <li>OpenCV</li>
+            <li>HTML/CSS/JS</li>
+            <li>Bootstrap</li>
+            <li>PHP & MySQL</li>
+            <li>IoT & EDA</li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="section-title">Certifications</div>
+          <ul>
+            <li>Node.js Developer – Microsoft Certified</li>
+            <li>Student Ambassador – Microsoft Learn</li>
+            <li>Journey to Cloud – IBM Certified</li>
+            <li>AI Specialist & Data Science – IBM</li>
+            <li>DevOps for Web Dev – AWS & GDSC</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Achievements & Strengths -->
+    <div class="section">
+      <div class="two-col">
+        <div>
+          <div class="section-title">Key Achievements</div>
+          <ul>
+            <li>90%+ precision in Disease Prediction ML model</li>
+            <li>Organized 10+ tech events with 80%+ participation</li>
+            <li>Led 50+ member Android & IoT Club</li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="section-title">Strengths</div>
+          <ul>
+            <li>Leadership & Team Management</li>
+            <li>Problem Solving & Analytical Thinking</li>
+            <li>Time Management & Adaptability</li>
+            <li>Communication & Collaboration</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Personal Details -->
+    <div class="section">
+      <div class="section-title">Personal Details</div>
+      <table>
+        <tr>
+          <td><strong>Date of Birth</strong></td>
+          <td>20 June 2006</td>
+        </tr>
+        <tr>
+          <td><strong>Gender</strong></td>
+          <td>Male</td>
+        </tr>
+        <tr>
+          <td><strong>Father's Name</strong></td>
+          <td>Mr. Subash Chandra</td>
+        </tr>
+        <tr>
+          <td><strong>Languages</strong></td>
+          <td>English (Proficient), Hindi (Native)</td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- 3px Bottom Margin (Safe) -->
+
+  </div>
+
+  <script>
+    document.getElementById('downloadPdf').addEventListener('click', () => {
+      const element = document.getElementById('resumeContent');
+      html2pdf()
+        .set({
+          margin: [10, 10, 10, 10],  // Safe margin all sides
+          filename: 'Abhishek_Kumar_Resume.pdf',
+          html2canvas: { scale: 2, useCORS: true },
+          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+        })
+        .from(element)
+        .save();
+    });
+  </script>
+
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Abhishek Kumar - Resume</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;500;700&display=swap');
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      line-height: 1.5;
+      padding: 20px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .download-btn {
+      background: #1a5276;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 4px;
+      font-weight: 500;
+      font-size: 16px;
+      cursor: pointer;
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    }
+
+    .download-btn:hover {
+      background: #154360;
+    }
+
+    .resume {
+      width: 210mm;
+      min-height: 297mm;
+      background: white;
+      padding: 18mm 15mm;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      font-size: 11pt;
     }
 
     .header {
