--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
       margin-bottom: 4pt;
     }
 
+    .date-location {
+      font-size: 10pt;
+      color: #777;
+      margin-bottom: 4pt;
+    }
+
     ul {
       margin: 6pt 0;
       padding-left: 18pt;
@@ -226,7 +232,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>B.Tech (CSE)<br>2022–2026</td>
+            <td>B.Tech (Computer Science & Engineering)<br>2022–2026</td>
             <td>Gandhi Institute of Engineering and Technology University</td>
             <td>GIET University, Gunupur</td>
             <td>6.5 CGPA</td>
@@ -254,35 +260,40 @@
       <div class="content">
         <div class="job-title">Full-Stack Web Development Intern</div>
         <div class="company">TECHISMUST Innovation Lab</div>
+        <div class="date-location">Remote | June 2023 - August 2023</div>
         <ul>
-          <li>Built dynamic movie review platform with user auth, search, and responsive UI</li>
-          <li>Developed full-stack blog with MERN, JWT, and rich-text editor</li>
+          <li>Developed dynamic movie review platform with user authentication, search functionality, and responsive UI</li>
+          <li>Engineered full-stack blog application using MERN stack with JWT authentication and rich-text editor</li>
         </ul>
       </div>
 
       <div class="content">
         <div class="job-title">Full-Stack Web Development Intern</div>
         <div class="company">JK Paper Ltd.</div>
+        <div class="date-location">Remote | April 2023 - June 2023</div>
         <ul>
-          <li>Designed multi-role ticketing system with secure authentication</li>
-          <li>Integrated analytics dashboard for performance tracking</li>
+          <li>Designed and implemented multi-role ticketing system with secure authentication mechanisms</li>
+          <li>Integrated analytics dashboard for performance tracking and reporting</li>
         </ul>
       </div>
 
       <div class="content">
         <div class="job-title">AIML Intern</div>
         <div class="company">EduNet Foundation</div>
+        <div class="date-location">Remote | January 2023 - March 2023</div>
         <ul>
-          <li><strong>Major Project:</strong> Disease Prediction System (>90% precision)</li>
-          <li><strong>Mini Project:</strong> Iris Flower Classification (95%+ accuracy using SVM/KNN)</li>
+          <li>Developed Disease Prediction System achieving over 90% precision using machine learning algorithms</li>
+          <li>Built Iris Flower Classification model with 95%+ accuracy using SVM and KNN algorithms</li>
         </ul>
       </div>
 
       <div class="content">
         <div class="job-title">Data Science Intern</div>
         <div class="company">Remark Skill Education</div>
+        <div class="date-location">Remote | May 2022 - July 2022</div>
         <ul>
-          <li>Completed summer training in Data Science using Python, Pandas, and Scikit-Learn</li>
+          <li>Completed intensive training in Data Science using Python, Pandas, and Scikit-Learn</li>
+          <li>Applied statistical analysis and machine learning techniques to real-world datasets</li>
         </ul>
       </div>
     </div>
@@ -294,24 +305,27 @@
       <div class="content">
         <div class="job-title">Hospital Management System</div>
         <ul>
-          <li>Admin, Doctor & Patient portals with appointment booking and email alerts</li>
-          <li>Tech: PHP, MySQL, Bootstrap</li>
+          <li>Developed comprehensive admin, doctor, and patient portals with appointment booking functionality</li>
+          <li>Implemented automated email alert system for appointments and notifications</li>
+          <li>Technologies: PHP, MySQL, Bootstrap, JavaScript</li>
         </ul>
       </div>
 
       <div class="content">
         <div class="job-title">Secure Video Confession Platform</div>
         <ul>
-          <li>Tri-level anti-corruption reporting system with encrypted video upload</li>
-          <li>Tech: React, Node.js, PostgreSQL, JWT</li>
+          <li>Engineered tri-level anti-corruption reporting system with encrypted video upload capabilities</li>
+          <li>Implemented secure authentication and authorization using JWT tokens</li>
+          <li>Technologies: React.js, Node.js, PostgreSQL, JWT, Encryption</li>
         </ul>
       </div>
 
       <div class="content">
         <div class="job-title">Face Detection using OpenCV</div>
         <ul>
-          <li>Real-time face detection using Haar Cascade Classifier</li>
-          <li>Built extensible framework for future ML applications</li>
+          <li>Developed real-time face detection application using Haar Cascade Classifier</li>
+          <li>Built extensible framework for future machine learning and computer vision applications</li>
+          <li>Technologies: Python, OpenCV, Haar Cascade Classifier</li>
         </ul>
       </div>
     </div>
@@ -320,23 +334,26 @@
     <div class="section">
       <div class="two-col">
         <div>
-          <div class="section-title">Skills</div>
+          <div class="section-title">Technical Skills</div>
           <ul class="skills-list">
-            <li>Python</li>
+            <li>Python Programming</li>
             <li>Machine Learning</li>
-            <li>Node.js</li>
-            <li>React.js</li>
-            <li>MongoDB</li>
-            <li>PostgreSQL</li>
-            <li>AWS</li>
-            <li>IBM Cloud</li>
-            <li>Scikit-Learn</li>
+            <li>Node.js Development</li>
+            <li>React.js Framework</li>
+            <li>MongoDB Database</li>
+            <li>PostgreSQL Database</li>
+            <li>AWS Cloud Services</li>
+            <li>IBM Cloud Platform</li>
+            <li>Scikit-Learn Library</li>
             <li>Pandas & NumPy</li>
-            <li>OpenCV</li>
-            <li>HTML/CSS/JS</li>
-            <li>Bootstrap</li>
+            <li>OpenCV Computer Vision</li>
+            <li>HTML/CSS/JavaScript</li>
+            <li>Bootstrap Framework</li>
             <li>PHP & MySQL</li>
-            <li>IoT & EDA</li>
+            <li>IoT & Embedded Systems</li>
+            <li>Data Analysis</li>
+            <li>RESTful APIs</li>
+            <li>Git Version Control</li>
           </ul>
         </div>
 
@@ -347,7 +364,8 @@
             <li>Student Ambassador – Microsoft Learn</li>
             <li>Journey to Cloud – IBM Certified</li>
             <li>AI Specialist & Data Science – IBM</li>
-            <li>DevOps for Web Dev – AWS & GDSC</li>
+            <li>DevOps for Web Development – AWS & GDSC</li>
+            <li>Python for Data Science – IBM</li>
           </ul>
         </div>
       </div>
@@ -359,9 +377,10 @@
         <div>
           <div class="section-title">Key Achievements</div>
           <ul>
-            <li>90%+ precision in Disease Prediction ML model</li>
-            <li>Organized 10+ tech events with 80%+ participation</li>
-            <li>Led 50+ member Android & IoT Club</li>
+            <li>Achieved 90%+ precision in Disease Prediction Machine Learning model</li>
+            <li>Organized 10+ technical events with 80%+ participation rate</li>
+            <li>Led 50+ member Android & IoT Club as President</li>
+            <li>Recognized as Microsoft Learn Student Ambassador</li>
           </ul>
         </div>
 
@@ -372,6 +391,8 @@
             <li>Problem Solving & Analytical Thinking</li>
             <li>Time Management & Adaptability</li>
             <li>Communication & Collaboration</li>
+            <li>Technical Documentation</li>
+            <li>Project Planning & Execution</li>
           </ul>
         </div>
       </div>
@@ -396,6 +417,10 @@
         <tr>
           <td><strong>Languages</strong></td>
           <td>English (Proficient), Hindi (Native)</td>
+        </tr>
+        <tr>
+          <td><strong>Nationality</strong></td>
+          <td>Indian</td>
         </tr>
       </table>
     </div>
@@ -410,413 +435,6 @@
       html2pdf()
         .set({
           margin: [10, 10, 10, 10],  // Safe margin all sides
-          filename: 'Abhishek_Kumar_Resume.pdf',
-          html2canvas: { scale: 2, useCORS: true },
-          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-        })
-        .from(element)
-        .save();
-    });
-  </script>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Abhishek Kumar - Resume</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;500;700&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Helvetica Neue', Arial, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      line-height: 1.5;
-      padding: 20px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .download-btn {
-      background: #1a5276;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 4px;
-      font-weight: 500;
-      font-size: 16px;
-      cursor: pointer;
-      margin-bottom: 20px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    }
-
-    .download-btn:hover {
-      background: #154360;
-    }
-
-    .resume {
-      width: 210mm;
-      min-height: 297mm;
-      background: white;
-      padding: 18mm 15mm;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      font-size: 11pt;
-    }
-
-    .header {
-      text-align: center;
-      margin-bottom: 12pt;
-      border-bottom: 2pt solid #1a5276;
-      padding-bottom: 8pt;
-    }
-
-    .header h1 {
-      font-size: 24pt;
-      font-weight: 700;
-      color: #1a5276;
-      margin-bottom: 4pt;
-      letter-spacing: 1px;
-    }
-
-    .header p {
-      font-size: 12pt;
-      color: #555;
-      margin: 2pt 0;
-    }
-
-    .section {
-      margin-top: 14pt;
-    }
-
-    .section-title {
-      font-size: 13pt;
-      font-weight: 700;
-      color: #1a5276;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      border-bottom: 1pt solid #ddd;
-      padding-bottom: 4pt;
-      margin-bottom: 8pt;
-    }
-
-    .content {
-      margin-bottom: 10pt;
-    }
-
-    .job-title {
-      font-weight: 700;
-      font-size: 12pt;
-      color: #1a5276;
-      margin-bottom: 2pt;
-    }
-
-    .company {
-      font-style: italic;
-      color: #555;
-      margin-bottom: 4pt;
-    }
-
-    ul {
-      margin: 6pt 0;
-      padding-left: 18pt;
-    }
-
-    li {
-      margin-bottom: 4pt;
-      position: relative;
-    }
-
-    li::marker {
-      color: #1a5276;
-      font-weight: bold;
-    }
-
-    .two-col {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 15pt;
-      margin-top: 8pt;
-    }
-
-    .skills-list {
-      columns: 2;
-      column-gap: 20pt;
-      list-style: none;
-      padding-left: 0;
-    }
-
-    .skills-list li {
-      margin-bottom: 4pt;
-      position: relative;
-      padding-left: 12pt;
-    }
-
-    .skills-list li::before {
-      content: "■";
-      color: #1a5276;
-      position: absolute;
-      left: 0;
-      font-size: 8pt;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 8pt;
-      font-size: 10pt;
-    }
-
-    th, td {
-      border: 1pt solid #ddd;
-      padding: 6pt 8pt;
-      text-align: left;
-    }
-
-    th {
-      background-color: #f0f0f0;
-      font-weight: 700;
-      color: #1a5276;
-    }
-
-    @media print {
-      body, .resume { background: white; box-shadow: none; margin: 0; padding: 0; }
-      .download-btn { display: none; }
-      .resume { padding: 15mm; width: 100%; }
-    }
-  </style>
-</head>
-<body>
-
-  <button class="download-btn" id="downloadPdf">
-    Download PDF
-  </button>
-
-  <div class="resume" id="resumeContent">
-
-    <!-- Header -->
-    <div class="header">
-      <h1>ABHISHEK KUMAR</h1>
-      <p>+91 75185 31311 | 22cse357.abhishekkumar@giet.edu</p>
-      <p>Barahi Newada, Varanasi, Uttar Pradesh - 221207</p>
-    </div>
-
-    <!-- Career Objective -->
-    <div class="section">
-      <div class="section-title">Career Objective</div>
-      <div class="content">
-        <p>Seeking a challenging role in software development and data science where I can leverage my technical expertise in full-stack development, machine learning, and cloud technologies to drive innovation and contribute to organizational success.</p>
-      </div>
-    </div>
-
-    <!-- Education -->
-    <div class="section">
-      <div class="section-title">Education</div>
-      <table>
-        <thead>
-          <tr>
-            <th>Degree & Year</th>
-            <th>Institution</th>
-            <th>Board/University</th>
-            <th>CGPA/%</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>B.Tech (CSE)<br>2022–2026</td>
-            <td>Gandhi Institute of Engineering and Technology University</td>
-            <td>GIET University, Gunupur</td>
-            <td>6.5 CGPA</td>
-          </tr>
-          <tr>
-            <td>Intermediate (+2 Science)<br>2021</td>
-            <td>Shree Bhagirathi Maharaj Inter College</td>
-            <td>UP Board</td>
-            <td>60.2%</td>
-          </tr>
-          <tr>
-            <td>High School (10th)<br>2019</td>
-            <td>Green Valley Public School</td>
-            <td>CBSE</td>
-            <td>67.1%</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <!-- Internships -->
-    <div class="section">
-      <div class="section-title">Internships</div>
-
-      <div class="content">
-        <div class="job-title">Full-Stack Web Development Intern</div>
-        <div class="company">TECHISMUST Innovation Lab</div>
-        <ul>
-          <li>Built dynamic movie review platform with user auth, search, and responsive UI</li>
-          <li>Developed full-stack blog with MERN, JWT, and rich-text editor</li>
-        </ul>
-      </div>
-
-      <div class="content">
-        <div class="job-title">Full-Stack Web Development Intern</div>
-        <div class="company">JK Paper Ltd.</div>
-        <ul>
-          <li>Designed multi-role ticketing system with secure authentication</li>
-          <li>Integrated analytics dashboard for performance tracking</li>
-        </ul>
-      </div>
-
-      <div class="content">
-        <div class="job-title">AIML Intern</div>
-        <div class="company">EduNet Foundation</div>
-        <ul>
-          <li><strong>Major Project:</strong> Disease Prediction System (>90% precision)</li>
-          <li><strong>Mini Project:</strong> Iris Flower Classification (95%+ accuracy using SVM/KNN)</li>
-        </ul>
-      </div>
-
-      <div class="content">
-        <div class="job-title">Data Science Intern</div>
-        <div class="company">Remark Skill Education</div>
-        <ul>
-          <li>Completed summer training in Data Science using Python, Pandas, and Scikit-Learn</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Projects -->
-    <div class="section">
-      <div class="section-title">Projects</div>
-
-      <div class="content">
-        <div class="job-title">Hospital Management System</div>
-        <ul>
-          <li>Admin, Doctor & Patient portals with appointment booking and email alerts</li>
-          <li>Tech: PHP, MySQL, Bootstrap</li>
-        </ul>
-      </div>
-
-      <div class="content">
-        <div class="job-title">Secure Video Confession Platform</div>
-        <ul>
-          <li>Tri-level anti-corruption reporting system with encrypted video upload</li>
-          <li>Tech: React, Node.js, PostgreSQL, JWT</li>
-        </ul>
-      </div>
-
-      <div class="content">
-        <div class="job-title">Face Detection using OpenCV</div>
-        <ul>
-          <li>Real-time face detection using Haar Cascade Classifier</li>
-          <li>Built extensible framework for future ML applications</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Skills & Certifications -->
-    <div class="section">
-      <div class="two-col">
-        <div>
-          <div class="section-title">Skills</div>
-          <ul class="skills-list">
-            <li>Python</li>
-            <li>Machine Learning</li>
-            <li>Node.js</li>
-            <li>React.js</li>
-            <li>MongoDB</li>
-            <li>PostgreSQL</li>
-            <li>AWS</li>
-            <li>IBM Cloud</li>
-            <li>Scikit-Learn</li>
-            <li>Pandas & NumPy</li>
-            <li>OpenCV</li>
-            <li>HTML/CSS/JS</li>
-            <li>Bootstrap</li>
-            <li>PHP & MySQL</li>
-            <li>IoT & EDA</li>
-          </ul>
-        </div>
-
-        <div>
-          <div class="section-title">Certifications</div>
-          <ul>
-            <li>Node.js Developer – Microsoft Certified</li>
-            <li>Student Ambassador – Microsoft Learn</li>
-            <li>Journey to Cloud – IBM Certified</li>
-            <li>AI Specialist & Data Science – IBM</li>
-            <li>DevOps for Web Dev – AWS & GDSC</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Achievements & Strengths -->
-    <div class="section">
-      <div class="two-col">
-        <div>
-          <div class="section-title">Key Achievements</div>
-          <ul>
-            <li>90%+ precision in Disease Prediction ML model</li>
-            <li>Organized 10+ tech events with 80%+ participation</li>
-            <li>Led 50+ member Android & IoT Club</li>
-          </ul>
-        </div>
-
-        <div>
-          <div class="section-title">Strengths</div>
-          <ul>
-            <li>Leadership & Team Management</li>
-            <li>Problem Solving & Analytical Thinking</li>
-            <li>Time Management & Adaptability</li>
-            <li>Communication & Collaboration</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Personal Details -->
-    <div class="section">
-      <div class="section-title">Personal Details</div>
-      <table>
-        <tr>
-          <td><strong>Date of Birth</strong></td>
-          <td>20 June 2006</td>
-        </tr>
-        <tr>
-          <td><strong>Gender</strong></td>
-          <td>Male</td>
-        </tr>
-        <tr>
-          <td><strong>Father's Name</strong></td>
-          <td>Mr. Subash Chandra</td>
-        </tr>
-        <tr>
-          <td><strong>Languages</strong></td>
-          <td>English (Proficient), Hindi (Native)</td>
-        </tr>
-      </table>
-    </div>
-
-  </div>
-
-  <script>
-    document.getElementById('downloadPdf').addEventListener('click', () => {
-      const element = document.getElementById('resumeContent');
-      html2pdf()
-        .set({
-          margin: [10, 10, 10, 10],
           filename: 'Abhishek_Kumar_Resume.pdf',
           html2canvas: { scale: 2, useCORS: true },
           jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
